fixed alignment of some elements

--- a/style.css
+++ b/style.css
@@ -8,7 +8,14 @@ body {
   padding: 0;
   margin: 0;
   background: #1c1c1c;
+  text-align: center;
   box-sizing: border-box;
+}
+
+#heading {
+  /* border: 2px solid yellow; */
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .wrapper {
@@ -17,7 +24,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
+  width: 80%;
+  margin: auto;
   height: 100%;
   flex-direction: column;
 }
@@ -29,12 +37,13 @@ body {
   width: 100%;
   height: 100%;
   flex-direction: column;
-  animation: fadeIn 3s ease-in 1s;
+  /* animation: fadeIn 3s ease-in 1s; */
 }
 
 .buttons {
   display: flex;
   gap: 20px;
+  /* border: 2px solid green; */
 }
 
 .rpsButton {
@@ -58,10 +67,16 @@ body {
   /*   box-shadow: 0px 1px 0px 0px; */
 }
 
+#end-game-button-div {
+  margin: 20px auto 0px;
+  /* border: 2px solid yellow; */
+}
+
 #endGameButton {
   background-color: rgb(184, 184, 184);
   color: #222;
   font-size: 2rem;
+  margin: auto;
   font-family: "Press Start 2P", sans-serif;
   padding: 2rem 2rem;
   cursor: pointer;
@@ -103,40 +118,36 @@ body {
 }
 
 #keyboard-tip {
-  margin: 30px auto 0;
+  margin: 30px auto 0px;
   font-size: 0.7rem;
+  /* border: 2px solid red; */
 }
 
 .resultContainer {
   font-size: 2rem;
   text-align: center;
-  margin: 30px auto;
+  margin: 40px auto 30px;
+  /* border: 2px solid red; */
 }
 
 #handsdiv {
-  height: 100px;
-  width: 400px;
+  height: 70px;
+  width: 243px;
   font-size: 48px;
   border-radius: 30px;
-  padding: auto;
-  margin: auto;
+  padding: 0px;
+  margin: 20px auto;
   color: white;
+  /* border: 2px solid brown; */
 }
 
 #scoreContainer {
   display: flex;
-  margin: 10px auto;
+  margin: auto;
+  /* border: 2px solid blue; */
 }
 
 #result {
-  margin-bottom: 30px;
-}
-
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
+  /* border: 2px solid green; */
+  height: 32px;
 }
